bk_ida/gccida/g1/get_secondary_mem
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1048:32: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  get_secondary_mem( rtx x, machine_mode mode, int opnum, reload_type type) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1048:62: error: must use 'enum' tag to refer to type 'reload_type'
rtx  get_secondary_mem( rtx x, machine_mode mode, int opnum, reload_type type) 
                                                             ^
                                                             enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1050:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1051:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v7; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1059:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1060:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = mode_class_0[v4] & 0xFFFFFFFD; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/reload.c:1077:74: error: use of undeclared identifier 'reload_type'
find_reloads_address( v4, 0LL, v9->fld[0].rtx, ( rtx *)v9->fld, opnum, ( reload_type)v11, 0, 0LL); 
                                                                         ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_secondary_mem/src/obj/reload.o] Error 1
